# NvChad-with-my-config

./: README.md  pyproject.toml
.github/: README.md
lua/custom/: chadrc.lua  init.lua  mappings.lua  plugins.lua  providers.lua
lua/custom/configs/: lspconfig.lua  molten.lua  neotest.lua  overrides.lua  treesitter-textobjects.lua  treesitter.lua
lua/plugins/configs/: lazy_nvim.lua
